# aeronSW_visualizer

./: README.md  readme.md
visualizer/: CMakeLists.txt
visualizer/src/: binary_utils.cpp  binary_utils.h  camera.cpp  configs.h  main.cpp  space.cpp  space.h
